Turn on logging and log skipped files during setup